--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Email/DoiRequest/data-managers.doi-requested.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Email/DoiRequest/data-managers.doi-requested.email.twig
@@ -5,10 +5,10 @@
 Dear {{ recipient.firstName }} {{ recipient.lastName }},<br>
 <p>
     A Digital Object Identifier (DOI) has been requested for the dataset
-    <a href="{{ url }}">{{ url }}</a> that is submitted
+    <a href="{{ doiRequest.url }}">{{ doiRequest.url }}</a> that is submitted
     and registered with the Gulf of Mexico Research Initiative Information and Data
-    Cooperative (GRIIDC) by {{ creator.firstName }} {{ creator.lastName }}.
-    {{ creator.firstName }} {{ creator.lastName }} is a member of {{ creator.researchGroupNames | join(', ') }}.
+    Cooperative (GRIIDC) by {{ doiRequest.creator.firstName }} {{ doiRequest.creator.lastName }}.
+    {{ doiRequest.creator.firstName }} {{ doiRequest.creator.lastName }} is a member of {{ doiRequest.creator.researchGroupNames | join(', ') }}.
 </p>
 Thank you,<br />
 The GRIIDC Team<br />
@@ -27,9 +27,9 @@ The GRIIDC Team<br />
 Dear {{ recipient.firstName }} {{ recipient.lastName }},
 
 A Digital Object Identifier (DOI) has been requested for the dataset
-{{ url }} that is submitted and registered with the Gulf of Mexico
-Research Initiative Information and Data Cooperative (GRIIDC) by {{ creator.firstName }} {{ creator.lastName }}.
-{{ creator.firstName }} {{ creator.lastName }} is a member of {{ creator.researchGroupNames | join(', ') }}.
+{{ doiRequest.url }} that is submitted and registered with the Gulf of Mexico
+Research Initiative Information and Data Cooperative (GRIIDC) by {{ doiRequest.creator.firstName }} {{ doiRequest.creator.lastName }}.
+{{ doiRequest.creator.firstName }} {{ doiRequest.creator.lastName }} is a member of {{ doiRequest.creator.researchGroupNames | join(', ') }}.
 
 Thank you,
 The GRIIDC Team
