--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Email/DoiRequest/reviewers.doi-requested.email.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Email/DoiRequest/reviewers.doi-requested.email.twig
@@ -1,9 +1,9 @@
 {% block subject 'DOI Approval Requested' %}
 
 {% block body_html %}
-Dear {{ recipient.firstName}} {{ recipient.lastName }},<br>
+Dear {{ recipient.firstName }} {{ recipient.lastName }},<br>
 <br>
-Please approve DOI:<a href="{{ url }}">{{ url }}</a>.<br>
+Please approve DOI:<a href="{{ doiRequest.url }}">{{ doiRequest.url }}</a>.<br>
 <br>
 Thank you,<br>
 <br>
@@ -17,7 +17,7 @@ If you believe you should not be receiving this email please notify
 {% block body_text %}
 Dear {{ recipient.firstName }} {{ recipient.lastName }},
 
-Please approve DOI:{{ url }}.
+Please approve DOI:{{ doiRequest.url }}.
 
 Thank you,
 
