Required DRPM access.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/PublicationDatasetLink/linkList.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/PublicationDatasetLink/linkList.html.twig
@@ -18,10 +18,6 @@
         )
     }}
 
-    {% stylesheets  '@PelagosAppBundle/Resources/public/css/entity.css' %}
-        {{ add_css(asset_url) }}
-    {% endstylesheets  %}
-
     {{
         add_js(
             [
@@ -31,39 +27,49 @@
         )
     }}
 
-    {% javascripts '@PelagosAppBundle/Resources/public/js/linkList.js' %}
-        {{ add_js(asset_url) }}
-    {% endjavascripts %}
+    {% if is_granted('ROLE_DATA_REPOSITORY_MANAGER') %}
+        {% javascripts '@PelagosAppBundle/Resources/public/js/linkList.js' %}
+            {{ add_js(asset_url) }}
+        {% endjavascripts %}
 
-    {% javascripts '@FOSJsRoutingBundle/Resources/public/js/router.js' %}
-        {{ add_js(asset_url) }}
-    {% endjavascripts %}
+        {% javascripts '@FOSJsRoutingBundle/Resources/public/js/router.js' %}
+            {{ add_js(asset_url) }}
+        {% endjavascripts %}
 
-    {{ add_js(path('fos_js_routing_js', { callback: 'fos.Router.setData' })) }}
+        {{ add_js(path('fos_js_routing_js', { callback: 'fos.Router.setData' })) }}
+    {% endif %}
 
 {% endblock %}
 
 {% block body %}
-<h2>UDI to DOI Relations maintained by Pelagos</h2>
-<table id="linkList" class="display">
-<thead>
-    <tr>
-        <th>FC</th>
-        <th>Project</th>
-        <th>UDI</th>
-        <th>DOI</th>
-        <th>Link Creator</th>
-        <th>Created On</th>
-    </tr>
-</thead>
-<tbody>
-</tbody>
-</table>
-<div>
-    <a href="{{ path('pelagos_app_ui_publicationdatasetlink_default') }}">Create new</a>
-</div>
+{% if is_granted('ROLE_DATA_REPOSITORY_MANAGER') %}
+    <h2>UDI to DOI Relations maintained by Pelagos</h2>
+    <table id="linkList" class="display">
+    <thead>
+        <tr>
+            <th>FC</th>
+            <th>Project</th>
+            <th>UDI</th>
+            <th>DOI</th>
+            <th>Link Creator</th>
+            <th>Created On</th>
+        </tr>
+    </thead>
+    <tbody>
+    </tbody>
+    </table>
+    <div>
+        <a href="{{ path('pelagos_app_ui_publicationdatasetlink_default') }}">Create new</a>
+    </div>
 
-<button id="delete_button" disabled>Delete Selected Row</button>
-<div id="dialog-confirm" title="Are you sure?">
-</div>
+    <button id="delete_button" disabled>Delete Selected Row</button>
+    <div id="dialog-confirm" title="Are you sure?">
+    </div>
+{% else %}
+    <div class="messages error">
+        <h2 class="element-invisible">Error message</h2>
+        This feature is only accessible by Data Repository Managers.
+    </div>
+{% endif %}
+
 {% endblock %}
