s/id="cancel_button"/class="close_button"/

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Download/download-splash-screen.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Download/download-splash-screen.html.twig
@@ -76,7 +76,7 @@
                         </div>
                         {% endif %}
                         <div style="display: table-cell;">
-                            <button id="cancel_button" title="Cancel this download attempt and close this dialog screen." class="dl_button" style="padding: 0px 0px;">
+                            <button class="close_button" title="Cancel this download attempt and close this dialog screen." class="dl_button" style="padding: 0px 0px;">
                                 {% image '@PelagosAppBundle/Resources/public/images/cancel.png' %}
                                     <img style="vertical-align:middle;" src="{{ asset_url }}" border="0">
                                 {% endimage %}
