--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/access-denied.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/access-denied.html.twig
@@ -1,21 +1,9 @@
 {% extends "PelagosAppBundle::layout.html.twig" %}
 
-{% block head %}
-
-    {{
-        add_css (
-            [
-                '//cdn.datatables.net/1.10.7/css/jquery.dataTables.min.css',
-            ]
-        )
-    }}
-
-    {% stylesheets  '@PelagosAppBundle/Resources/public/css/mdapp.css' %}
-        {{ add_css(asset_url) }}
-    {% endstylesheets  %}
-
-{% endblock %}
-
 {% block body %}
-This resource is only available to Data Repository Managers.
+<div class="messages warning">
+    <h2 class="element-invisible">Warning message</h2>
+    This resource is only available to Data Repository Managers.
+</div>
+
 {% endblock %}
