--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
@@ -92,7 +92,7 @@
                                         <img src="{{ asset_url }}">
                                         {% endimage %}
                                     </button>&nbsp;
-                                    <a href="{{jiraBase}}/{{dta.jira_ticket|default}}" target="_BLANK">{{dta.jira_ticket|default}}</a>
+                                    <a href="{{ jiraBase }}/{{ dta.issueTrackingTicket }}" target="_BLANK">{{ dta.issueTrackingTicket }}</a>
                                     <table class="jiraForm">
                                         <tr>
                                             <td><input type="text" name="jiraTicket" class="jiraTicketClass" placeholder="URL or Jira Issue"></td>
