Minor fix per peer review...match proper case in twig.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
@@ -195,7 +195,7 @@
                                         {% if dta.metadata %}
                                             <td id="md_filename">{{ dta.udi }}</td>
                                         {% else %}
-                                            <td id="md_filename">{{ dta.datasetsubmission.metadatafilename }}</td>
+                                            <td id="md_filename">{{ dta.datasetsubmission.MetadataFileName }}</td>
                                         {% endif %}
                                     </tr>
                                 </table>
