--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Download/log-in-to-download-splash-screen.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Download/log-in-to-download-splash-screen.html.twig
@@ -32,7 +32,7 @@
                 </td>
                 <td align="center">
                     <div>
-                        <a href="/auth/oauth2/google?dest={{ refererPath }}">
+                        <a href="{{ path('hwi_oauth_service_redirect', {'service': 'google'}) }}">
                             {% image '@PelagosAppBundle/Resources/public/images/googleauth.png' %}
                                 <img src="{{ asset_url }}" alt="google auth logo">
                             {% endimage %}
@@ -40,7 +40,7 @@
                     </div>
                     <div>
                         Members of the public may use their<br />
-                        <a href="/auth/oauth2/google?dest={{ refererPath }}">Google login</a> to download data.
+                        <a href="{{ path('hwi_oauth_service_redirect', {'service': 'google'}) }}">Google login</a> to download data.
                     </div>
                 </td>
             </tr>
