Enable logfile display to MDAPP table view.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/main.html.twig
@@ -34,9 +34,14 @@
         )
     }}
 
-    {% javascripts '@PelagosAppBundle/Resources/public/js/mdapp.js' %}
+    {% javascripts
+        '@PelagosAppBundle/Resources/public/js/mdapp.js'
+        '@FOSJsRoutingBundle/Resources/public/js/router.js'
+    %}
         {{ add_js(asset_url) }}
     {% endjavascripts %}
+
+    {{ add_js(path('fos_js_routing_js', { callback: 'fos.Router.setData' })) }}
 
 {% endblock %}
 
