Fixed cancel button on download external resource splash screen.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Download/download-external-resource-splash-screen.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Download/download-external-resource-splash-screen.html.twig
@@ -52,7 +52,7 @@
                     By using the link above, you agree to the GRIIDC terms in the above disclaimer.
                 </p>
                 <p style="margin-bottom:0">
-                    <button onclick="jQuery('#dataset_download').hide();" style="font-weight:bold;margin:10px 10px 10px 0px;">Cancel</button>
+                    <button class="close_button" style="font-weight:bold;margin:10px 10px 10px 0px;">Cancel</button>
                 </p>
             </div>
         </div>
